agrego los input para convertirHorasEnSegundos

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -178,8 +178,13 @@
         <p id="valueInputToGetInfo"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">convertirHorasEnSegundos(horas)</a></strong>: Crear una función convertirHorasEnSegundos que tome como argumento un número de horas y devuelva la conversión a segundos de dicha cantidad de horas.</p>
+        <p><strong><a href="#hours" >convertirHorasEnSegundos(horas)</a></strong>: Crear una función convertirHorasEnSegundos que tome como argumento un número de horas y devuelva la conversión a segundos de dicha cantidad de horas.</p>
         <p><code>convertirHorasEnSegundos(1) // 3600</code></p>
+        <h4>Ingresa las horas y hace click en el boton CONVERTIR A SEGUNDOS</h4>
+        <label for="hours">Ingrese las horas para calcular los segundos: </label>
+        <input type="number" id="hours" > 
+        <button type="button"  onclick="getValueInputToConvertToSeconds()">CONVERTIR A SEGUNDOS</button> 
+        <p id="valueInputToConvertToSeconds"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">calcularPerimetroRectangulo(ancho, alto)</a></strong>: Crear una función calcularAreaTriangulo que tome como argumentos el ancho y el alto de un rectángulo y devuelva su perímetro.</p>
