agrego funcion para calcular perimetro de rectangulo

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -187,8 +187,15 @@
         <p id="valueInputToConvertToSeconds"></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">calcularPerimetroRectangulo(ancho, alto)</a></strong>: Crear una función calcularAreaTriangulo que tome como argumentos el ancho y el alto de un rectángulo y devuelva su perímetro.</p>
+        <p><strong><a href="#withRectangle">calcularPerimetroRectangulo(ancho, alto)</a></strong>: Crear una función calcularAreaTriangulo que tome como argumentos el ancho y el alto de un rectángulo y devuelva su perímetro.</p>
         <p><code>calcularPerimetroRectangulo(3.2, 5) // 16.4</code></p>
+        <h4>Ingresa el ancho, el alto y hace click en el boton CALCULAR PERIMETRO RECTANGULO</h4>
+        <label for="withRectangle">Ingrese el ANCHO del rectangulo: </label>
+        <input type="number" id="withRectangle" > 
+        <label for="heightRectangle">Ingrese el ALTO del rectangulo: </label>
+        <input type="number" id="heightRectangle" > 
+        <button type="button"  onclick="getValueInputToPerimeterRectangle()">CALCULAR PERIMETRO RECTANGULO</button> 
+        <p id="valueInputToGetRectanglePerimeter"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">calcularPorcentaje(numero, porcentaje)</a></strong>:Crear una función calcularPorcentaje que tome como argumentos un número y un porcentaje y devuelva el valor del porcentaje correspondiente al número.</p>
