agrego la parte para ingresar monto y ver si acepta deposito

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -244,8 +244,13 @@
         <p><code>calcularPuntaje(0, 2, 1) // 20</code></p>
       </li>
       <li>
-        <p><strong><a href="#" target="_blank">aceptaDeposito(monto)</a></strong>: Crear una función aceptaDeposito que tome como argumento un número monto y devuelva true si el monto es divisible por 10 o false si no lo es.</p>
+        <p><strong><a href="#deposit" >aceptaDeposito(monto)</a></strong>: Crear una función aceptaDeposito que tome como argumento un número monto y devuelva true si el monto es divisible por 10 o false si no lo es.</p>
         <p><code>aceptaDeposito(440) // true</code></p>
+        <h4>Ingresa el monto y hace click en el boton ACEPTA DEPOSITO</h4>
+        <label for="deposit">Ingrese el monto del deposito: </label>
+        <input type="number" id=deposit" > 
+        <button type="button"  onclick="getValueInputToAcceptDeposit()">ACEPTA DEPOSITO</button> 
+        <p id="valueInputToAcceptDeposit"></p>
       </li> 
     </ul>
   </main>
