agrego el ejercicio de acepta deposito

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -248,7 +248,7 @@
         <p><code>aceptaDeposito(440) // true</code></p>
         <h4>Ingresa el monto y hace click en el boton ACEPTA DEPOSITO</h4>
         <label for="deposit">Ingrese el monto del deposito: </label>
-        <input type="number" id=deposit" > 
+        <input type="number" id="deposit" > 
         <button type="button"  onclick="getValueInputToAcceptDeposit()">ACEPTA DEPOSITO</button> 
         <p id="valueInputToAcceptDeposit"></p>
       </li> 
