agrego para calcular si hace frio

--- a/clase11/index.html
+++ b/clase11/index.html
@@ -234,6 +234,11 @@
       <li>
         <p><strong><a href="#" target="_blank">haceFrio(temperatura)</a></strong>: Crear una función haceCalor que tome como argumento un número temperatura y devuelva true si hace frio (12 grados o menos) o false de lo contrario.</p>
         <p><code>haceFrio(-2) // true</code></p>
+        <h4>Ingresa la temperatura y hace click en el boton HACE FRIO</h4>
+        <label for="isTemperatureCold">Ingrese la temperatura: </label>
+        <input type="number" id="isTemperatureCold" > 
+        <button type="button"  onclick="getValueInputToIsTemperatureCold()">HACE FRIO</button> 
+        <p id="valueInputToIsTemperatureCold"></p>
       </li>
       <li>
         <p><strong><a href="#" target="_blank">calcularPuntaje(facil, normal, dificil)</a></strong>: Crear una función calcularPuntaje que calcule el puntaje de un examen que consiste en ejercicios de distinto nivel. Debe tomar como argumento tres que consisten en la cantidad de ejercicios resueltos en cada nivel y devolver un número con el puntaje correspondiente. El puntaje se calcula de la siguiente forma:.</p>
