--- a/clase12/index.html
+++ b/clase12/index.html
@@ -27,24 +27,19 @@
 <body>
    <!-- HEADER -->
    <header class="header header-clase10">
-    <h1>Bienvenidos a mis practicas de la 11ra clase</h1>
+    <h1>Bienvenidos a mis practicas de la 12da clase</h1>
   </header>
   <!-- MAIN -->
   <main class="main-clase11">
-    <h2>Empezamos con <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
+    <h2>Estructuras de control: bucles <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
+    <!-- FUNCIONES -->
     <h3>Te detallo las practicas realizadas con FUNCIONES:</h3>
-    <p>Completando con números en los recuadros y haciendo click en los botones podés ver la práctica en acción.</p>
+    <p>Haciendo click en los botones podés ver la práctica en acción.</p>
     <ul>
       <li>
-        <p><strong><a href="#firstNumberSum">sumar(a, b)</a></strong>: Crear una función sumar que tome como argumentos dos números y devuelva la suma de ellos. Ejemplo:</p> 
-        <p><code>sumar(2, 3) // 5</code></p>
-        <h4>Ingresa los números ENTEROS y hace click en el boton SUMA</h4>
-        <label for="firstNumberSum">Ingrese un primer numero: </label>
-        <input type="number" id="firstNumberSum" > 
-        <label for="secondNumberSum">Ingrese un segundo numero: </label>
-        <input type="number" id="secondNumberSum" > 
-        <button type="button"  onclick="getValueInputToSum()">SUMAR</button> 
-        <p id="valueInputSum"></p> 
+        <p><strong><a href="#">obtenerIndice(valor, array)</a></strong>: Crear una función obtenerIndice que tome como argumento un valor cualquiera valor y un array cualquiera array y devuelva el índice del primer ítem con dicho valor en el array, o -1 si no hay ninguno. Ejemplo:</p> 
+        <p><code>obtenerIndice(12, [5, 7, 12, 34, 54, 2, 12]) // 2</code></p>
+        <p><code>obtenerIndice(83, [5, 7, 12, 34, 54, 2, 12]) // -1</code></p>
       </li>
       <li>
         <p><strong><a href="#firstNumberSubtrac">restar(a, b)</a></strong>: Crear una función restar que tome como argumentos dos números y devuelva la resta de ellos. Ejemplo:</p>
