actualizo los ejercicios

--- a/clase12/index.html
+++ b/clase12/index.html
@@ -30,7 +30,7 @@
     <h1>Bienvenidos a mis practicas de la 12da clase</h1>
   </header>
   <!-- MAIN -->
-  <main class="main-clase11">
+  <main class="main-clase12">
     <h2>Estructuras de control: bucles <img src="https://img.icons8.com/color/48/undefined/javascript--v1.png" alt="icono de javascript"/></h2>
     <!-- FUNCIONES -->
     <h3>Te detallo las practicas realizadas con FUNCIONES:</h3>
@@ -42,15 +42,10 @@
         <p><code>obtenerIndice(83, [5, 7, 12, 34, 54, 2, 12]) // -1</code></p>
       </li>
       <li>
-        <p><strong><a href="#firstNumberSubtrac">restar(a, b)</a></strong>: Crear una función restar que tome como argumentos dos números y devuelva la resta de ellos. Ejemplo:</p>
-        <p><code>restar(3, 2) // 1</code></p>
-        <h4>Ingresa los números ENTEROS y hace click en el boton RESTAR</h4>
-        <label for="firstNumberSubtract">Ingrese un primer numero: </label>
-        <input type="number" id="firstNumberSubtract" > 
-        <label for="secondNumberSubtract">Ingrese un segundo numero: </label>
-        <input type="number" id="secondNumberSubtract" > 
-        <button type="button"  onclick="getValueInputToSubtract()">RESTAR</button> 
-        <p id="valueInputSubtract"></p> 
+        <p><strong><a href="#">repetir(valor, cantidad))</a></strong>: Crear una función repetir que tome como argumento un valor valor y un número entero cantidad, y devuelva una array con valor repetido cantidad de veces. Ejemplo:</p>
+        <p><code>repetir('lovelace', 3) // ['lovelace', 'lovelace', 'lovelace']</code></p>
+        <p><code>repetir('a', 5) // ['a', 'a', 'a', 'a', 'a']</code></p>
+        <p><code>repetir('html', 0) // []</code></p>
       </li>
       <li>
         <p><strong><a href="#firstNumberMultiply">multiplicar(a, b)</a></strong>: Crear una función multiplicar que tome como argumentos dos números y devuelva la multiplicación de ellos. Ejemplo:</p>
