--- a/clase13/index.html
+++ b/clase13/index.html
@@ -158,7 +158,143 @@
     </ul>
     <!-- EJERCICIOS DEL DOM -->
     <h3>Ejercicios del DOM</h3>
-
+    <p>Para los siguientes ejercicios, no es necesario darle estilos más allá de los básicos que requiera el ejercicio para visualizarse correctamente. Se pueden utilizar funciones realizadas en los ejercicios previos.</p>
+    <ul>
+      <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li> <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+       <li>
+        <p><strong><a href="#"> </a></strong>:  .</p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+        <p><code>  </code></p>
+      </li>
+    </ul>
   </main>
   <!-- FOOTER -->
   <footer>
