agrego ejercicios del DOM

--- a/clase13/index.html
+++ b/clase13/index.html
@@ -161,6 +161,47 @@
     <p>Para los siguientes ejercicios, no es necesario darle estilos más allá de los básicos que requiera el ejercicio para visualizarse correctamente. Se pueden utilizar funciones realizadas en los ejercicios previos.</p>
     <ul>
       <li>
+        <p><strong><a href="#">📝 Lista de tareas</a></strong>:  Crear un programa que muestre:.</p>
+        <p><code>-un input de texto</code></p>
+        <p><code>-un botón que diga Agregar tarea</code></p>
+        <p><code>-una lista ul</code></p>
+        <p><code>Cuando se hace click en el botón, se debe agregar el valor del input a un array y actualizar la lista.</code></p>
+        <p><code>Para actualizar la lista se debe:</code></p>
+        <p><code>-borrar todo lo que contenga</code></p>
+        <p><code>-recorrer el array y por cada ítem</code></p>
+        <p><code>-insertar un ítem de lista li con el valor del ítem del array</code></p>
+      </li>
+       <li>
+        <p><strong><a href="#">🔍 Buscador</a></strong>: Crear un programa que muestre:</p>
+        <p>-un input de texto</p>
+        <p>-una lista ul</p>
+        <p>El programa debe tener como datos un array con strings con distintas palabras, y al inicializarse la lista debe mostrar las palabras del array como ítems de lista.</p>
+        <p>Al escribir en el input, se debe actualizar la lista para mostrar aquellas palabras que contengan como substring lo ingresado, ignorando mayúsculas y minúsuculas. Es decir, si se busca script y JavaScript es un string dentro del array, se debe mostrar.</p>
+        <p>Para actualizar la lista se debe:</p>
+        <p><code>-borrar todo lo que contenga  </code></p>
+        <p><code>-recorrer el array y por cada ítem</code></p>
+        <p><code>-insertar un ítem de lista li con el valor del ítem del array</code></p>
+        <p>Cuando el input no tienen ningún valor ingresado, la lista debe mostrar todos los ítems del array.</p>
+        <p>TIP: vas a necesitar dos arrays, uno para todas las palabras y otro para los resultados de búsqueda.</p>
+      </li>
+       <li>
+        <p><strong><a href="#">📈 Total de gastos</a></strong>:  Crear un programa que muestre:</p>
+        <p><code>-un input de números</code></p>
+        <p><code>-un botón que diga Agregar gasto/ganancia</code></p>
+        <p><code>-una lista ul</code></p>
+        <p><code>-un elemento p</code></p>
+        <p>Cuando se hace click en el botón, se debe agregar el valor del input a un array y actualizar la lista y el elemento p.</p>
+        <p>Para actualizar la lista se debe:</p>
+        <p><code>-borrar todo lo que contenga</code></p>
+        <p><code>-recorrer el array y por cada ítem</code></p>
+        <p><code>-insertar un ítem de lista li con el valor del ítem del array</code></p>
+        <p>El elemento p se actualiza con el total de la suma de los valores del array.</p>
+      </li>
+    </ul>
+    <!-- OBJETOS -->
+    <h4>Objetos</h4>
+    <ul>
+      <li>
         <p><strong><a href="#"> </a></strong>:  .</p>
         <p><code>  </code></p>
         <p><code>  </code></p>
@@ -169,7 +210,7 @@
         <p><code>  </code></p>
         <p><code>  </code></p>
       </li>
-       <li>
+      <li>
         <p><strong><a href="#"> </a></strong>:  .</p>
         <p><code>  </code></p>
         <p><code>  </code></p>
@@ -178,114 +219,7 @@
         <p><code>  </code></p>
         <p><code>  </code></p>
       </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li> <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
-        <p><strong><a href="#"> </a></strong>:  .</p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-        <p><code>  </code></p>
-      </li>
-       <li>
+      <li>
         <p><strong><a href="#"> </a></strong>:  .</p>
         <p><code>  </code></p>
         <p><code>  </code></p>
